--- a/app/src/main/java/ifsc/joe/ui/PainelControles.form
+++ b/app/src/main/java/ifsc/joe/ui/PainelControles.form
@@ -73,7 +73,7 @@
               </component>
             </children>
           </grid>
-          <grid id="7c296" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="7c296" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -189,6 +189,14 @@
                   </component>
                 </children>
               </grid>
+              <component id="754c5" class="javax.swing.JButton" binding="coletarButton">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Button"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <component id="4727f" class="javax.swing.JLabel" binding="logo">
